# obfuscation-passes

./: .gitignore  CMakeLists.txt  README.md  obfconst.py
llvm-pass-bogus/: Bogus.cpp  CMakeLists.txt  rebuild_n_run.sh  run.sh
llvm-pass-bogus/bogus/: CMakeLists.txt  bogus.cpp
llvm-pass-mba/: CMakeLists.txt  Mba.cpp  add  add.ll  add_mba  add_mba.ll  add_mba2  add_mba2.ll  example.c  foo.c  foo.ll  foo_mba.ll  rebuild_n_run.sh  run.sh  sub  sub_double  subtract.c  subtract.ll  subtract_mba  subtract_mba.ll
llvm-pass-mba/mba/: CMakeLists.txt  Mba.cpp  mba.cpp
llvm-pass-mba/tests/: add.c  and.c  sub.c  xor.c
llvm-pass-obfconst/: CMakeLists.txt  ObfConst.cpp  rebuild_n_run.sh  run.sh
llvm-pass-obfconst/obfconst/: CMakeLists.txt  ObfConst.cpp
llvm-pass-obfstring/: CMakeLists.txt  ObfString.cpp  codec.bc  codec.c  codec_ror.c  decode.bc  rebuild_n_run.sh  run.sh
llvm-pass-obfstring/obfstring/: CMakeLists.txt  ObfString.cpp  obfstring.cpp
llvm-pass-obfzero/: rebuild_n_run.sh
obfuscate-zero/: CMakeLists.txt  foo.c
obfuscate-zero/obfzero/: CMakeLists.txt  ObfZero.cpp
testing/bitcodeMetrics/: CMakeLists.txt
testing/plusaes/: aes_all_bench.txt  aes_bench.txt  aes_bogus_bench.txt  aes_const_bench.txt  aes_mba_bench.txt  aes_reverse_bench.txt  aes_string_bench.txt  benchmark.sh  main.cpp
testing/qsort/: benchmark.sh  main.c  note.txt  qs_MCS_bench.txt  qs_SCM_bench.txt  qs_const_bench.txt  qs_mba_bench.txt  qs_none_bench.txt  qs_string2_bench.txt  qsort.c
testing/sha/: all3_bench.txt  benchmark.sh  codec.bc  main.cpp  sha2.hpp  sha_MCBS_bench.txt  (+8 more)
(+5 files in other folders)
